# all-GCL-manuscript

./: .gitignore  README.md  config.yaml  pyproject.toml
all_GCL/: read_nwb_table.py  utils.py
all_gcl_manuscript/: dataframe.py  density.py  labels.py  paths.py  read_nwb_table.py
djimaging/: README.md
notebooks/: Fig2_dataset_overview.ipynb  Fig3_celltype_distribution.ipynb  Fig3_functional_classification.ipynb  Fig4_celltype_distribution.ipynb  Fig5_addendum.ipynb  Fig5_technical_validation.ipynb
results/: ageBinary_random_forest_features_chirp_8Hz_average_norm_preproc_bar.csv  experimenter_random_forest_Cai-Dyszkant_features_chirp_8Hz_average_norm_preproc_bar.csv  experimenter_random_forest_Cai-Gonschorek_features_chirp_8Hz_average_norm_preproc_bar.csv  experimenter_random_forest_Cai-Szatko_features_chirp_8Hz_average_norm_preproc_bar.csv  experimenter_random_forest_Dyszkant-Gonschorek_features_chirp_8Hz_average_norm_preproc_bar.csv  experimenter_random_forest_Dyszkant-Szatko_features_chirp_8Hz_average_norm_preproc_bar.csv  experimenter_random_forest_Gonschorek-Szatko_features_chirp_8Hz_average_norm_preproc_bar.csv  fieldIdBinary-0-2_random_forest_features_chirp_8Hz_average_norm_preproc_bar.csv  session_date_binary_exp_num_1_match_experimenter-age_diff_le_10w-sex_unmatched-field_dist_unmatched_field_ids_0-1_features_chirp_8Hz_average_norm_preproc_bar.csv  setupid_random_forest_features_chirp_8Hz_average_norm_preproc_bar.csv  sex_random_forest_features_chirp_8Hz_average_norm_preproc_bar.csv  (+1 more)
scripts/: run_all.sh  run_experimenters_1x1.sh  (+1 more)
(+9 files in other folders)
